--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<div>
 <img src="./KakaoTalk_20171222_184431377.jpg"/>
-</body>
+    </div>
+    </body>
 </html>
