--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>RemiClo</title>
-</head>
-<body>
-<div>
-<img src="./KakaoTalk_20171222_184431377.jpg"/>
-    </div>
-    </body>
+<!DOCTYPE HTML>
+<!--
+	Story by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Remiclo</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="../../Downloads/html5up-story/assets/css/main.css" />
+	</head>
+	<body>
+
+		<!-- Wrapper -->
+			<div id="wrapper" class="divided">
+
+				<!-- One -->
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
+							<h1>Remiclo</h1>
+							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+						</div>
+						<div class="image">
+							<img src="./KakaoTalk_20171222_184431377.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer class="wrapper style1 align-center">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="../../Downloads/html5up-story/assets/js/jquery.min.js"></script>
+			<script src="../../Downloads/html5up-story/assets/js/jquery.scrollex.min.js"></script>
+			<script src="../../Downloads/html5up-story/assets/js/jquery.scrolly.min.js"></script>
+			<script src="../../Downloads/html5up-story/assets/js/skel.min.js"></script>
+			<script src="../../Downloads/html5up-story/assets/js/util.js"></script>
+			<script src="../../Downloads/html5up-story/assets/js/main.js"></script>
+
+	</body>
 </html>
