--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Remiclo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="../../Downloads/html5up-story/assets/css/main.css" />
+		<link rel="stylesheet" href="./assets/css/main.css" />
 	</head>
 	<body>
 
@@ -44,12 +44,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="../../Downloads/html5up-story/assets/js/jquery.min.js"></script>
-			<script src="../../Downloads/html5up-story/assets/js/jquery.scrollex.min.js"></script>
-			<script src="../../Downloads/html5up-story/assets/js/jquery.scrolly.min.js"></script>
-			<script src="../../Downloads/html5up-story/assets/js/skel.min.js"></script>
-			<script src="../../Downloads/html5up-story/assets/js/util.js"></script>
-			<script src="../../Downloads/html5up-story/assets/js/main.js"></script>
+			<script src="./assets/js/jquery.min.js"></script>
+			<script src="./assets/js/jquery.scrollex.min.js"></script>
+			<script src="./js/jquery.scrolly.min.js"></script>
+			<script src="./assets/js/skel.min.js"></script>
+			<script src="./assets/js/util.js"></script>
+			<script src="./assets/js/main.js"></script>
 
 	</body>
 </html>
