--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<!-- Scripts -->
 			<script src="./assets/js/jquery.min.js"></script>
 			<script src="./assets/js/jquery.scrollex.min.js"></script>
-			<script src="./js/jquery.scrolly.min.js"></script>
+			<script src="./assets/js/jquery.scrolly.min.js"></script>
 			<script src="./assets/js/skel.min.js"></script>
 			<script src="./assets/js/util.js"></script>
 			<script src="./assets/js/main.js"></script>
