--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1 style="font-family:cursive">Remiclo</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<p class="major">퀄리티있게</p>
 						</div>
 						<div class="image">
 							<img src="./KakaoTalk_20171222_184431377.jpg" alt="" />
