--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1 style="font-family:cursive">Remiclo</h1>
-							<p class="major">퀄리티있게</p>
+							<p class="major" style="font-family:serif">보드라운 착용감</p>
+							<p class="major" style="font-family:serif">특별하고 세련된 스타일링</p>
 						</div>
 						<div class="image">
 							<img src="./KakaoTalk_20171222_184431377.jpg" alt="" />
